# Cpp-BasicSynth

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AudioEngine.h  Envelope.h  Filter.h  Oscillator.h  Synth.h  SynthParams.h  SynthetizerConfig.h
include/audio/: AudioEngine.h  Envelope.h  Filter.h  Oscillator.h  SynthetizerConfig.h
include/ui/: SynthUI.h
libraries/DearImGui/MainWindow/: MainWindow.cpp
libraries/PortAudio/AudioGenerator/: AudioGenerator.cpp  AudioGenerator.h
libraries/SDL3/lib/macos/SDL3.framework/Versions/A/: SDL3
libraries/SDL3/lib/macos/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
libraries/sdl/lib/macos/SDL3.framework/Versions/A/Resources/: Info.plist
src/: AudioEngine.cpp  Envelope.cpp  Filter.cpp  Oscillator.cpp  Synth.cpp  main.cpp
src/audio/: AudioEngine.cpp  Envelope.cpp  Filter.cpp  Oscillator.cpp
src/ui/: SynthUI.cpp
